resolve footer spacing issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,9 @@
   font-style: normal;
   font-display: swap;
 }
+body{
+  scroll-behavior: smooth;
+}
 
 .new {
   background-image: url("../../public/thisimg.svg");
